news and phone created. so, dashboard UI finished

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reduxjs/toolkit": "^1.4.0",
+    "@syncfusion/ej2-react-charts": "^18.3.35",
     "@syncfusion/ej2-react-grids": "^18.3.35",
+    "@syncfusion/ej2-react-progressbar": "^18.3.35",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
