--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@syncfusion/ej2-react-grids": "^18.3.35",
     "@syncfusion/ej2-react-progressbar": "^18.3.35",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "formik": "^2.1.7",
@@ -46,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
